--- a/DockerfileClient
+++ b/DockerfileClient
@@ -4,7 +4,7 @@ COPY . /app
 WORKDIR /app
 
 RUN cd /app; npm install
-RUN chmod 777 -R *
+RUN chmod 777 -Rf *
 #RUN cd /app; npm run server
 #RUN cd /app; npm run webpack-devserver
 CMD ["npm", "run", "webpack-devserver"]
